Fix all Landscape layout issues for details page for all mobile and tablet Landscape size devices

--- a/_scss/4-details-components/_details-icons.scss
+++ b/_scss/4-details-components/_details-icons.scss
@@ -20,6 +20,12 @@
   }
 }
 
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .smaller-icon2 {
+	  width: 22%;
+  }
+}
+
 @media screen and (max-height: 412px) and (max-width: 732px) {
   .smaller-icon2 {
 	  width: 25%;
@@ -71,6 +77,12 @@
 @media screen and (min-width: 1280px) {
   .tight-marg {
     width: 30%;
+  }
+}
+
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .tight-marg {
+	  width: 16%;
   }
 }
 
