--- a/css/main.css
+++ b/css/main.css
@@ -1767,6 +1767,10 @@ body {
   .infographic {
     width: 25%; } }
 
+@media screen and (max-height: 768px) and (max-width: 1024px) {
+  .infographic {
+    width: 40%; } }
+
 @media screen and (max-height: 414px) and (max-width: 736px) {
   .infographic {
     width: 25%; } }
@@ -1808,6 +1812,10 @@ body {
   .smaller-icon2 {
     width: 25%; } }
 
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .smaller-icon2 {
+    width: 22%; } }
+
 @media screen and (max-height: 412px) and (max-width: 732px) {
   .smaller-icon2 {
     width: 25%; } }
@@ -1844,6 +1852,10 @@ body {
 @media screen and (min-width: 1280px) {
   .tight-marg {
     width: 30%; } }
+
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .tight-marg {
+    width: 16%; } }
 
 @media screen and (max-height: 412px) and (max-width: 732px) {
   .tight-marg {
@@ -1904,6 +1916,20 @@ body {
     width: 120px;
     height: 120px; } }
 
+@media screen and (max-height: 768px) and (max-width: 1024px) {
+  .arrow2 {
+    margin-top: 370px; } }
+
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .arrow2 {
+    margin-top: 230px;
+    left: 46%; } }
+
+@media screen and (max-height: 412px) and (max-width: 732px) {
+  .arrow2 {
+    margin-top: 210px;
+    left: 44%; } }
+
 @media screen and (max-height: 375px) and (max-width: 667px) {
   .arrow2 {
     margin-top: 40px;
@@ -1937,6 +1963,10 @@ body {
 @media screen and (min-width: 1280px) {
   .what-pos {
     width: 50%; } }
+
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .what-pos {
+    width: 33%; } }
 
 @media screen and (max-height: 412px) and (max-width: 732px) {
   .what-pos {
